src/objects/Harvest__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Create_Harvest_Project_Automatically__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, a Harvest Project will be created automatically in Harvest when a Salesforce Opportunity is won</description>
        <inlineHelpText>If selected, a Harvest Project will be created automatically in Harvest when a Salesforce Opportunity is won</inlineHelpText>
        <label>Create Harvest Project Automatically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CronTriggerId__c</fullName>
        <label>CronTriggerId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_Client_in_Harvest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, when a Salesforce Account is deleted, its corresponding Harvest Client will be deleted (or archived) in Harvest</description>
        <inlineHelpText>If selected, when a Salesforce Account is deleted, its corresponding Harvest Client will be deleted (or archived) in Harvest</inlineHelpText>
        <label>Delete Client in Harvest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Inbound_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated, do not use.</description>
        <label>Enable Inbound Sync (do not use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InboundLastRunDateTime__c</fullName>
        <description>The last successful run of the inbound integration.  Used for delta-based calls to the Harvest API</description>
        <label>InboundLastRunDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Harvest password for integration</description>
        <inlineHelpText>Harvest password for integration</inlineHelpText>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSL__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does your Harvest account support SSL (https)?</inlineHelpText>
        <label>Harvest SSL Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subdomain__c</fullName>
        <description>Example: https://&lt;THIS IS YOUR SUBDOMAIN&gt;.harvestapp.com</description>
        <inlineHelpText>Example: https://&lt;THIS IS YOUR SUBDOMAIN&gt;.harvestapp.com</inlineHelpText>
        <label>Harvest Subdomain</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Harvest username for integration</description>
        <inlineHelpText>Harvest username for integration</inlineHelpText>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Harvest</label>
</CustomObject>